v.120626
- Guide tree estimation from a MAFFT alignment
- Merge of two pre-defined alignments
- Support for Exonerate and MAFFT on Windows
- Clean up of some code


v.111130
- Exonerate anchoring now also for guidetree computation. Experimental!


v.111129
- Allow guide trees with no branch lengths. Default branch length is 0.1;
  use -fixedbranches=# to change.
- Removed the dependency to boost libraries.


v.111013
- First update in Google Code
- Alignment speed ups with Exonerate anchoring.


v.101018
- Last version before migration to Google Code