@@ -1,9 +1,9 @@
 #############################################################################
 # Makefile for building: prank
-# Generated by qmake (2.01a) (Qt 4.8.1) on: Tue Jul 10 15:50:55 2012
+# Generated by qmake (2.01a) (Qt 4.8.1) on: Thu Jul 12 21:41:07 2012
 # Project:  prank.pro
 # Template: app
-# Command: /usr/bin/qmake-qt4 -spec /usr/share/qt4/mkspecs/linux-g++ -o Makefile prank.pro
+# Command: /usr/bin/qmake-qt4 -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
 #############################################################################
 
 ####### Compiler, tools and options
@@ -11,11 +11,11 @@
 CC            = gcc
 CXX           = g++
 DEFINES       = -DQT_WEBKIT
-CFLAGS        = -pipe -g $(DEFINES)
-CXXFLAGS      = -pipe -g $(DEFINES)
-INCPATH       = -I/usr/share/qt4/mkspecs/linux-g++ -I. -I/usr/include
+CFLAGS        = -m64 -pipe -g $(DEFINES)
+CXXFLAGS      = -m64 -pipe -g $(DEFINES)
+INCPATH       = -I/usr/share/qt4/mkspecs/linux-g++-64 -I. -I/usr/include
 LINK          = g++
-LFLAGS        = 
+LFLAGS        = -m64
 LIBS          = $(SUBLIBS)    
 AR            = ar cqs
 RANLIB        = 
@@ -154,7 +154,7 @@ all: Makefile $(TARGET)
 $(TARGET):  $(OBJECTS)  
 	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
 
-Makefile: prank.pro  /usr/share/qt4/mkspecs/linux-g++/qmake.conf /usr/share/qt4/mkspecs/common/unix.conf \
+Makefile: prank.pro  /usr/share/qt4/mkspecs/linux-g++-64/qmake.conf /usr/share/qt4/mkspecs/common/unix.conf \
 		/usr/share/qt4/mkspecs/common/linux.conf \
 		/usr/share/qt4/mkspecs/common/gcc-base.conf \
 		/usr/share/qt4/mkspecs/common/gcc-base-unix.conf \
@@ -169,7 +169,7 @@ Makefile: prank.pro  /usr/share/qt4/mkspecs/linux-g++/qmake.conf /usr/share/qt4/
 		/usr/share/qt4/mkspecs/features/default_pre.prf \
 		/usr/share/qt4/mkspecs/features/debug.prf \
 		/usr/share/qt4/mkspecs/features/default_post.prf
-	$(QMAKE) -spec /usr/share/qt4/mkspecs/linux-g++ -o Makefile prank.pro
+	$(QMAKE) -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
 /usr/share/qt4/mkspecs/common/unix.conf:
 /usr/share/qt4/mkspecs/common/linux.conf:
 /usr/share/qt4/mkspecs/common/gcc-base.conf:
@@ -186,7 +186,7 @@ Makefile: prank.pro  /usr/share/qt4/mkspecs/linux-g++/qmake.conf /usr/share/qt4/
 /usr/share/qt4/mkspecs/features/debug.prf:
 /usr/share/qt4/mkspecs/features/default_post.prf:
 qmake:  FORCE
-	@$(QMAKE) -spec /usr/share/qt4/mkspecs/linux-g++ -o Makefile prank.pro
+	@$(QMAKE) -spec /usr/share/qt4/mkspecs/linux-g++-64 -o Makefile prank.pro
 
 dist: 
 	@$(CHK_DIR_EXISTS) .tmp/prank1.0.0 || $(MKDIR) .tmp/prank1.0.0 
