@@ -1,3 +1,8 @@
+v.120712
+- For codon alignment, MAFFT guide tree now with protein sequences
+  (fixes several issues with codon alignment)
+
+
 v.120626
 - Guide tree estimation from a MAFFT alignment
 - Merge of two pre-defined alignments
